syntax = "proto3";
option go_package = ".;proto";

import "google/protobuf/empty.proto";

service User{
  rpc GetUserList(GetUserListReq) returns (GetUserListReply);
  rpc GetUserByPhone(GetUserByPhoneReq) returns (UserInfo);
  rpc GetUserById(GetUserByIdReq) returns (UserInfo);
  rpc CreateUser(CreateUserReq) returns (UserInfo);
  rpc UpdateUser(UpdateUserReq) returns (google.protobuf.Empty);
  rpc CheckPassword(CheckPasswordReq) returns (CheckPasswordReply);
}

message UserInfo{
  uint64 id = 1;
  string phone = 2;
  string nickname = 3;
  uint64 birthday = 4;
  string gender = 5;
  int32 role = 6;
  uint64 created_at = 7;
  string password = 8;
}

message GetUserListReq{
  int32 page_size = 1;
  string page_token = 2;
}

message GetUserListReply{
  string token = 1;
  repeated UserInfo user_infos = 2;

}

message GetUserByPhoneReq{
  string phone = 1;
}

message GetUserByIdReq{
  uint64 userId = 1;
}

message CreateUserReq{
  UserInfo user_info = 1;
}

message UpdateUserReq{
  UserInfo user_info = 1;
}

message CheckPasswordReq{
  uint64 user_id = 1;
  string password = 2;
}

message CheckPasswordReply{
  bool is_check = 1;
}